--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="container">
-      <header class="main-header">
+      <header class="main-header clearfix">
         <h1>📘 The Code Magazine</h1>
 
         <nav>
@@ -27,6 +27,7 @@
             alt="portrait of Laura Jones"
             width="50"
             height="50"
+            class="author-img"
           />
           <p id="author">
             Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
