--- a/flexbox.html
+++ b/flexbox.html
@@ -40,6 +40,10 @@
         margin: 40px;
 
         /* FLEXBOX */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* gap: 20px; */
       }
     </style>
   </head>
