--- a/flexbox.html
+++ b/flexbox.html
@@ -41,10 +41,32 @@
 
         /* FLEXBOX */
         display: flex;
-        justify-content: center;
+        justify-content: stretch;
         align-items: center;
-        /* gap: 20px; */
+        gap: 20px;
       }
+
+      /* .el {
+        flex: 0 0 50px;
+      } */
+
+      .el--1 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        /* flex: 1 0 auto; */
+        order: 1;
+      }
+
+      .el--4 {
+        /* flex: 2 0 50px; */
+        align-self: flex-start;
+        order: -1;
+      }
+
+      /* .el--5 {
+        flex: 0 1 10px; 
+      } */
     </style>
   </head>
   <body>
