practice session 4 GRIDS

--- a/css-grid.html
+++ b/css-grid.html
@@ -36,13 +36,22 @@
         /* STARTER */
         font-family: sans-serif;
         background-color: #ddd;
-        font-size: 40px;
+        font-size: 30px;
         margin: 40px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 400px 300px 200px 100px;
+        grid-template-rows: 200px 100px;
+
+        /* gap: 30px; */
+        column-gap: 80px;
+        row-gap: 10px;
       }
 
       .container--2 {
+        display: none;
+
         /* STARTER */
         font-family: sans-serif;
         background-color: black;
