--- a/css-grid.html
+++ b/css-grid.html
@@ -14,22 +14,31 @@
       }
       .el--3 {
         background-color: green;
-        /* height: 150px; */
+        height: 150px;
       }
       .el--4 {
         background-color: goldenrod;
+        grid-column: 4 / span 1;
+        grid-row: 2 / -1;
       }
       .el--5 {
         background-color: palevioletred;
+        grid-column: 2 / 3;
       }
       .el--6 {
         background-color: steelblue;
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
       }
       .el--7 {
         background-color: yellow;
+        grid-column: 2 / 4;
+        grid-row: 1 / 3;
       }
       .el--8 {
         background-color: crimson;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
       }
 
       .container--1 {
@@ -49,10 +58,11 @@
         /* grid-template-rows: repeat(2, 1fr) auto 200px; */
 
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 1fr auto;
-        height: 600px;
+        grid-template-rows: 1fr 1fr auto 2fr;
+        /* height: 600px; */
+
         /* gap: 30px; */
-        column-gap: 10px;
+        column-gap: 20px;
         row-gap: 40px;
       }
 
@@ -76,11 +86,11 @@
     <div class="container--1">
       <div class="el el--1">(1) HTML</div>
       <div class="el el--2">(2) and</div>
+      <div class="el el--7">(7) to</div>
       <div class="el el--3">(3) CSS</div>
       <div class="el el--4">(4) are</div>
       <div class="el el--5">(5) amazing</div>
       <div class="el el--6">(6) languages</div>
-      <div class="el el--7">(7) to</div>
       <div class="el el--8">(8) learn</div>
     </div>
 
