practice session 8 FLEXBOX

--- a/css-grid.html
+++ b/css-grid.html
@@ -20,6 +20,11 @@
         background-color: goldenrod;
         grid-column: 4 / span 1;
         grid-row: 2 / -1;
+
+        display: flex;
+
+        align-items: center;
+        justify-content: center;
       }
       .el--5 {
         background-color: palevioletred;
