practice session 9 GRIDS

--- a/css-grid.html
+++ b/css-grid.html
@@ -11,10 +11,16 @@
       }
       .el--2 {
         background-color: orangered;
+        grid-column: -1 / span 3;
       }
       .el--3 {
         background-color: green;
         height: 150px;
+
+        display: grid;
+
+        justify-items: center;
+        align-items: center;
       }
       .el--4 {
         background-color: goldenrod;
