--- a/css-grid.html
+++ b/css-grid.html
@@ -11,45 +11,45 @@
       }
       .el--2 {
         background-color: orangered;
-        grid-column: -1 / span 3;
+        /* grid-column: -1 / span 3; */
       }
       .el--3 {
         background-color: green;
         height: 150px;
 
-        display: grid;
+        /* display: grid;
 
         justify-items: center;
-        align-items: center;
+        align-items: center; */
       }
       .el--4 {
         background-color: goldenrod;
-        grid-column: 4 / span 1;
+        /* grid-column: 4 / span 1;
         grid-row: 2 / -1;
 
         display: flex;
 
         align-items: center;
-        justify-content: center;
+        justify-content: center; */
       }
       .el--5 {
         background-color: palevioletred;
-        grid-column: 2 / 3;
+        /* grid-column: 2 / 3; */
       }
       .el--6 {
         background-color: steelblue;
-        grid-column: 3 / 4;
-        grid-row: 2 / 3;
+        /* grid-column: 3 / 4;
+        grid-row: 2 / 3; */
       }
       .el--7 {
         background-color: yellow;
-        grid-column: 2 / 4;
-        grid-row: 1 / 3;
+        /* grid-column: 2 / 4;
+        grid-row: 1 / 3; */
       }
       .el--8 {
         background-color: crimson;
-        grid-column: 2 / 3;
-        grid-row: 1 / 2;
+        /* grid-column: 2 / 3;
+        grid-row: 1 / 2; */
       }
 
       .container--1 {
@@ -75,21 +75,24 @@
         /* gap: 30px; */
         column-gap: 20px;
         row-gap: 40px;
+
+        display: none;
       }
 
       .container--2 {
-        display: none;
-
         /* STARTER */
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
-        margin: 100px;
+        margin: 40px;
 
-        width: 1000px;
+        width: 700px;
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
       }
     </style>
   </head>
