practice session 10 GRIDS

--- a/css-grid.html
+++ b/css-grid.html
@@ -93,6 +93,16 @@
         display: grid;
         grid-template-columns: 125px 200px 125px;
         grid-template-rows: 250px 100px;
+
+        /* Aligning tracks inside container:
+        distribute empty space */
+        justify-content: center;
+        align-content: center;
+
+        /* Aligning items INSIDE cells: moving items
+        within cells */
+        align-items: center;
+        justify-items: center;
       }
     </style>
   </head>
