practice session 11 GRIDS

--- a/css-grid.html
+++ b/css-grid.html
@@ -96,13 +96,18 @@
 
         /* Aligning tracks inside container:
         distribute empty space */
-        justify-content: center;
-        align-content: center;
+        justify-content: space-between;
+        align-content: space-around;
 
         /* Aligning items INSIDE cells: moving items
         within cells */
-        align-items: center;
-        justify-items: center;
+        align-items: end;
+        justify-items: end;
+      }
+
+      .el--3 {
+        align-self: center;
+        justify-self: center;
       }
     </style>
   </head>
